Create meta tag for search engine

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     />
     <link rel="stylesheet" href="style.css" />
     <meta charset="utf-8" />
+    <!--Meta tag for search engine-->
+    <meta name ="description" content="Femi Merit. Profile, Femi Merit's profile, FemiMerit. Profile"/>
     <!--Ttile-->
     <title>Femi Merit</title>
   </head>
