createmeta tag for search engine keyword

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta charset="utf-8" />
     <!--Meta tag for search engine-->
     <meta name ="description" content="Femi Merit. Profile, Femi Merit's profile, FemiMerit. Profile"/>
+    <meta name = "keyword" content = "Femi Merit, Femi's profile, profile Femi, Femi Merit's profile"/>
     <!--Ttile-->
     <title>Femi Merit</title>
   </head>
