Create general page structure

--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
     <!--Ttile-->
     <title>Femi Merit</title>
   </head>
-  <body>
 
+
+  <body>
+    <!--Header-->
+    <header></header>
+    <!--Main-->
+    <main></main>
+    <!--Footer-->
+    <footer></footer>
   </body>
+
   </html>
