Create navbar in header, add four links

--- a/index.html
+++ b/index.html
@@ -18,6 +18,33 @@
   <body>
     <!--Header-->
     <header></header>
+    <!--Create navbar within the header conataining four links-->
+    <nav class="navbar navbar-expand-lg">
+        <div>
+          <ul class="navbar-nav">
+            <li><a class="nav-link" href="#home">Home</a></li>
+            <li><a class="nav-link" href="#education">Education</a></li>
+            <li><a class="nav-link" href="#employment">Employment</a></li>
+            <li><a class="nav-link" href="#contacts">Contacts</a></li>
+          </ul>
+        </div>
+      </nav>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <!--Main-->
     <main></main>
     <!--Footer-->
