Create home section in main, add profile picture, name, and jobtitle

--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
         </div>
       </nav>
 
+      <!-- Home Section -->
+      <section id="home" class="banner">
+        <div>
+          <!--Profile picture-->
+          <img src="images/Profile pic.jpg"alt="Drawing of Jane Smith" class="profile-image"/>
+          <!--Name-->
+          <h1 class="tag name">FEMI MERIT</h1>
+          <!--Job title-->
+          <p class="tag title">SaaS Specialist</p>
+        </div>
+      </section>
+
 
 
 
