--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <section id="home" class="banner">
         <div>
           <!--Profile picture-->
-          <img src="images/Profile pic.jpg"alt="Drawing of Jane Smith" class="profile-image"/>
+          <img src="assets/images/Profile pic.jpg"alt="Drawing of Jane Smith" class="profile-image"/>
           <!--Name-->
           <h1 class="tag name">FEMI MERIT</h1>
           <!--Job title-->
