Add introdution section into the main

--- a/index.html
+++ b/index.html
@@ -42,6 +42,23 @@
         </div>
       </section>
 
+      <!-- Introduction Section -->
+      <section>
+        <p class="intro-left">
+          A committed and motivated IT professional who has developed a high level of
+          technical knowledge working to provide IT solution. With his
+          experience in IT he has displayed an excellent ability to
+          grasp complicated concepts and apply them effectively.
+          <br /><br />
+          He utilises his communication effectively to seamlessly integrate into
+          a diverse team, ensuring he adapts appropriately to different
+          personalities in order to collaboratively achieve the business goals.
+          From his experience working within the
+          IT industry he has Proven ability to troubleshoot complex issues, optimize 
+          performance and enhance system reliability.
+        </p>
+      </section>
+
 
 
 
