Add image to the introdcution section

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <!-- Introduction Section -->
       <section>
         <p class="intro-left">
+        <img src="assets/images/computer.jpg" alt="" class="image-right" />
           A committed and motivated IT professional who has developed a high level of
           technical knowledge working to provide IT solution. With his
           experience in IT he has displayed an excellent ability to
