Add education section into the main

--- a/index.html
+++ b/index.html
@@ -60,6 +60,36 @@
         </p>
       </section>
 
+       <!-- Education Section -->
+       <section id="education">
+        
+        <div class="education-right">
+          <h2>Education</h2>
+          <h4>Coventry University, Computer Engineer, 2012 - 2015</h4>
+
+          <ul id="position1">
+            <h5>Year 1</h5>
+            <li>System Projects</li>
+            <li>Fundamental Engineering Mathimatics</li>
+            <li>Computer System and Networking</li>
+          </ul>
+
+          <ul id="position2">
+            <h5>Year 2</h5>
+            <li>Communication Systems</li>
+            <li>Programming for Engineers</li>
+            <li>Network System Architectures</li>
+          </ul>
+
+          <ul id="position3">
+            <h5>Year 3</h5>
+            <li>Object Oriented Software/li>
+            <li>Advance Network Managment and Design</li>
+            <li>Research Project</li>
+          </ul>
+        </div>
+      </section>
+
 
 
 
