Add hyperlink image to the education section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </ul>
         </div>
       </nav>
-
+      <main>
       <!-- Home Section -->
       <section id="home" class="banner">
         <div>
@@ -62,7 +62,11 @@
 
        <!-- Education Section -->
        <section id="education">
-        
+        <!--Create a div to contain the hyperlink image in relation to the education section-->
+        <div>
+          <a href="https://www.coventry.ac.uk/" >
+            <img src="assets/images/University pic.jpeg" alt="First-slide" class="image-left"/></a>
+        </div>
         <div class="education-right">
           <h2>Education</h2>
           <h4>Coventry University, Computer Engineer, 2012 - 2015</h4>
