Add stylesheet styles to the education section

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           </ul>
         </div>
       </nav>
+      <!--Main-->
       <main>
       <!-- Home Section -->
       <section id="home" class="banner">
@@ -93,24 +94,7 @@
           </ul>
         </div>
       </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!--Main-->
-    <main></main>
+      </main>
     <!--Footer-->
     <footer></footer>
   </body>
