Add image for education section

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
           <a href="https://www.coventry.ac.uk/" >
             <img src="assets/images/University pic.jpeg" alt="First-slide" class="image-left"/></a>
         </div>
+        <!--Use a div to contain the list of education subjects -->
         <div class="education-right">
           <h2>Education</h2>
           <h4>Coventry University, Computer Engineer, 2012 - 2015</h4>
