Add employment section with hyperlink images for each employment

--- a/index.html
+++ b/index.html
@@ -95,6 +95,134 @@
           </ul>
         </div>
       </section>
+            <!-- Employment Section -->
+            <section id="employment">
+              <h2>Employment History</h2>
+              <!--Use a div element to contain details of responsibitly working in each company -->
+              <div class="employment-entry">
+                <!--Hyperlink image that will direct users to Capita website-->
+                <a href="https://www.capita.com/"> 
+                <img src="assets/images/capita image.jpg" alt="Capita" class="employment-image"/></a>
+                <!--Capita employment detail nested in a div element-->
+                <div class="employment-detail">
+                  <ul>
+                    <!--List for Capita-->
+                    <h5>Capita</h5>
+                    <li>
+                      Supporting Capita’s clients (such as NHS, NHS Wales, Ministry of
+                      Defense, and Strathclyde University) remotely
+                    </li>
+                    <li>
+                      Streamlined processes by collaborating with the dev team to
+                      ensure automation is implemented where needed
+                    </li>
+                    <li>
+                      Excellent understanding of account impersonation to recreate or
+                      debug issues
+                    </li>
+                    <li>
+                      Collaborating with the Development team to fix more complex
+                      issues
+                    </li>
+                    <li>Regular update of knowledge base with new fixes</li>
+                    <li>
+                      Routinely monitored SaaS applications performance ensuring data
+                      integrity and system reliability
+                    </li>
+                    <li>
+                      Managing deployment and Supporting integration of SaaS
+                      applications such as Salesforce, Zuora, Jira, Confluence,
+                      Tealium, Grafana, and Commerce tools
+                    </li>
+                  </ul>
+                </div>
+              </div>
+      
+              <!-- List for Coventry University -->
+              <div class="employment-entry">
+                <!--Hyperlink image that will direct users to Coventry University website-->
+                <a href="https://www.coventry.ac.uk/">
+                  <img src="images/Coventry university image.png" alt="Coventry University" class="employment-image"/></a>
+                  <!--Coventry University employment detail nested in a div element-->
+                  <div class="employment-detail">
+                  <ul>
+                    <h5>Coventry University</h5>
+                    <li>
+                      Supported end-users with technical issues such as printer
+                      issues, window operating systems, Mac OS, and in-house
+                      applications like Solar and Moodle
+                    </li>
+                    <li>
+                      Trained junior IT Technicians, staff, and students on Solar &
+                      Moodle with documentation I created, stored in ServiceNow
+                      knowledge base, and verified with managers and other Senior IT
+                      Technicians
+                    </li>
+                    <li>
+                      Coordinated with outsourced vendors to manage technical needs
+                      through email, phone calls, and occasional visits to their sites
+                    </li>
+                    <li>
+                      Led weekly meetings with junior IT technicians over Teams and in
+                      person to enhance first-line closure rates and customer service
+                    </li>
+                    <li>
+                      Collaborated with the Cyber security team and documented all
+                      improvements discussed in OneNote for all teams to read through
+                      to ensure robust protection of user information
+                    </li>
+                    <li>
+                      Routinely monitored SaaS applications performance ensuring data
+                      integrity and system reliability
+                    </li>
+                    <li>
+                      Managed tasks using project management tools such as Jira and
+                      ServiceNow to handle escalated tickets and migrate users to the
+                      new student portal
+                    </li>
+                  </ul>
+                </div>
+              </div>
+      
+              <!--List for NFU Mutual -->
+              <div class="employment-entry">
+                <!--Hyperlink image that will direct users to  NFU Mutual website-->
+                <a href="https://nfumutual.co.uk/">
+                  <img src="images/NFU Mutual image.jpg" alt="NFU Mutual" class="employment-image"/></a>
+                  <!--NFU Mutual employment detail nested in a div element-->
+                  <div class="employment-detail">
+                    <ul>
+                      <h5>NFU Mutual</h5>
+                      <li>
+                        Supported Capita’s clients (such as NHS, NHS Wales, Ministry of
+                        Defense, and Strathclyde University) remotely
+                      </li>
+                      <li>
+                        Streamlined processes by collaborating with the dev team to
+                        ensure automation is implemented where needed
+                      </li>
+                      <li>
+                        Excellent understanding of account impersonation to recreate or
+                        debug issues
+                      </li>
+                      <li>
+                        Collaborating with the Development team to fix more complex
+                        issues
+                      </li>
+                      <li>Regular update of knowledge base with new fixes</li>
+                      <li>
+                        Routinely monitored SaaS applications performance ensuring data
+                        integrity and system reliability
+                      </li>
+                      <li>
+                        Managing deployment and Supporting integration of SaaS
+                        applications such as Salesforce, Zuora, Jira, Confluence,
+                        Tealium, Grafana, and Commerce tools
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </section>
       </main>
     <!--Footer-->
     <footer></footer>
