Corrected the image elements

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               <div class="employment-entry">
                 <!--Hyperlink image that will direct users to Coventry University website-->
                 <a href="https://www.coventry.ac.uk/">
-                  <img src="images/Coventry university image.png" alt="Coventry University" class="employment-image"/></a>
+                  <img src="assets/images/Coventry university image.png" alt="Coventry University" class="employment-image"/></a>
                   <!--Coventry University employment detail nested in a div element-->
                   <div class="employment-detail">
                   <ul>
@@ -188,7 +188,7 @@
               <div class="employment-entry">
                 <!--Hyperlink image that will direct users to  NFU Mutual website-->
                 <a href="https://nfumutual.co.uk/">
-                  <img src="images/NFU Mutual image.jpg" alt="NFU Mutual" class="employment-image"/></a>
+                  <img src="assets/images/NFU Mutual image.jpg" alt="NFU Mutual" class="employment-image"/></a>
                   <!--NFU Mutual employment detail nested in a div element-->
                   <div class="employment-detail">
                     <ul>
