Add conatct section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a class="nav-link" href="#home">Home</a></li>
             <li><a class="nav-link" href="#education">Education</a></li>
             <li><a class="nav-link" href="#employment">Employment</a></li>
-            <li><a class="nav-link" href="#contacts">Contacts</a></li>
+            <li><a class="nav-link" href="#contact">Contact</a></li>
           </ul>
         </div>
       </nav>
@@ -45,8 +45,8 @@
 
       <!-- Introduction Section -->
       <section>
+        <img src="assets/images/computer.jpg" alt="" class="image-right"/>
         <p class="intro-left">
-        <img src="assets/images/computer.jpg" alt="" class="image-right" />
           A committed and motivated IT professional who has developed a high level of
           technical knowledge working to provide IT solution. With his
           experience in IT he has displayed an excellent ability to
@@ -89,15 +89,15 @@
 
           <ul id="position3">
             <h5>Year 3</h5>
-            <li>Object Oriented Software/li>
-            <li>Advance Network Managment and Design</li>
+            <li>Object Oriented Software</li>
+            <li>Advance Network Managment</li>
             <li>Research Project</li>
           </ul>
         </div>
       </section>
             <!-- Employment Section -->
             <section id="employment">
-              <h2>Employment History</h2>
+              <h2 class="employment-title">Employment History</h2>
               <!--Use a div element to contain details of responsibitly working in each company -->
               <div class="employment-entry">
                 <!--Hyperlink image that will direct users to Capita website-->
@@ -225,7 +225,19 @@
               </section>
       </main>
     <!--Footer-->
-    <footer></footer>
+    <footer>
+      <section id="contact">
+        <div class="contact-right">
+          <h4>Contact:</h4>
+          <ul>
+            <li>
+              Email:<a href="mailto:merritfemi@gmail.com">merritfemi@gmail.com</a>
+            </li>
+            <li>Mobile Phone: 07480150135</li>
+          </ul>
+        </div>
+      </section>
+    </footer>
   </body>
 
   </html>
