Add stylesheet styles for contact section

--- a/index.html
+++ b/index.html
@@ -226,7 +226,9 @@
       </main>
     <!--Footer-->
     <footer>
+      <!-- Contact Section -->
       <section id="contact">
+        <!--Use a div element to contain the list for the contact and a class element for the styling-->
         <div class="contact-right">
           <h4>Contact:</h4>
           <ul>
