--- a/index.html
+++ b/index.html
@@ -1,41 +1,38 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4/dist/css/bootstrap.min.css"
-    />
-    <link rel="stylesheet" href="style.css" />
     <meta charset="utf-8" />
     <!--Meta tag for search engine-->
-    <meta name ="description" content="Femi Merit. Profile, Femi Merit's profile, FemiMerit. Profile"/>
-    <meta name = "keyword" content = "Femi Merit, Femi's profile, profile Femi, Femi Merit's profile"/>
+    <meta name ="description" content="Femi Merit's cv for potential employee to view"/>
+    <meta name = "keyword" content = "Femi Merit, Femi's CV, CV Femi, Femi Merit's CV"/> 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" integrity="sha384-ENjdO4Dr2bkBIFxQpeoFnHgfQx1cNJvRlN/JtPYxNfUS6EnFi8tQuN9E9Jo+2G7E" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css" />
     <!--Ttile-->
     <title>Femi Merit</title>
   </head>
 
-
   <body>
     <!--Header-->
-    <header></header>
+    <header>
     <!--Create navbar within the header conataining four links-->
     <nav class="navbar navbar-expand-lg">
         <div>
           <ul class="navbar-nav">
-            <li><a class="nav-link" href="#home">Home</a></li>
-            <li><a class="nav-link" href="#education">Education</a></li>
-            <li><a class="nav-link" href="#employment">Employment</a></li>
-            <li><a class="nav-link" href="#contact">Contact</a></li>
+            <li><a class="nav-link" href="#home" aria-label="Navigate to Home section">Home</a></li>
+            <li><a class="nav-link" href="#education" aria-label="Navigate to Education section">Education</a></li>
+            <li><a class="nav-link" href="#employment" aria-label="Navigate to Employment section">Employment</a></li>
+            <li><a class="nav-link" href="#contact" aria-label="Navigate to Contact section">Contact</a></li>            
           </ul>
         </div>
       </nav>
+    </header>
       <!--Main-->
       <main>
       <!-- Home Section -->
       <section id="home" class="banner">
         <div>
           <!--Profile picture-->
-          <img src="assets/images/Profile pic.jpg"alt="Drawing of Jane Smith" class="profile-image"/>
+          <img src="assets/images/profile-pic.jpg"alt="femi's-profile-pic" class="profile-image"/>
           <!--Name-->
           <h1 class="tag name">FEMI MERIT</h1>
           <!--Job title-->
@@ -45,7 +42,7 @@
 
       <!-- Introduction Section -->
       <section>
-        <img src="assets/images/computer.jpg" alt="" class="image-right"/>
+        <img src="assets/images/computer.jpg" alt="stock-image" class="image-right"/>
         <p class="intro-left">
           A committed and motivated IT professional who has developed a high level of
           technical knowledge working to provide IT solution. With his
@@ -65,9 +62,10 @@
        <section id="education">
         <!--Create a div to contain the hyperlink image in relation to the education section-->
         <div>
-          <a href="https://www.coventry.ac.uk/" >
-            <img src="assets/images/University pic.jpeg" alt="First-slide" class="image-left"/></a>
-        </div>
+          <a href="https://www.coventry.ac.uk/" target="_blank">
+            <img src="assets/images/university-pic.jpeg" alt="university-image" class="image-left" />
+          </a>
+        </div>        
         <!--Use a div to contain the list of education subjects -->
         <div class="education-right">
           <h2>Education</h2>
@@ -101,8 +99,8 @@
               <!--Use a div element to contain details of responsibitly working in each company -->
               <div class="employment-entry">
                 <!--Hyperlink image that will direct users to Capita website-->
-                <a href="https://www.capita.com/"> 
-                <img src="assets/images/capita image.jpg" alt="Capita" class="employment-image"/></a>
+                <a href="https://www.capita.com/" target="_blank"> 
+                <img src="assets/images/capita-image.jpg" alt="capita-image" class="employment-image"/></a>
                 <!--Capita employment detail nested in a div element-->
                 <div class="employment-detail">
                   <ul>
@@ -141,8 +139,8 @@
               <!-- List for Coventry University -->
               <div class="employment-entry">
                 <!--Hyperlink image that will direct users to Coventry University website-->
-                <a href="https://www.coventry.ac.uk/">
-                  <img src="assets/images/Coventry university image.png" alt="Coventry University" class="employment-image"/></a>
+                <a href="https://www.coventry.ac.uk/" target="_blank">
+                  <img src="assets/images/coventry-university-image.png" alt="coventryuniversity-image" class="employment-image"/></a>
                   <!--Coventry University employment detail nested in a div element-->
                   <div class="employment-detail">
                   <ul>
@@ -187,8 +185,8 @@
               <!--List for NFU Mutual -->
               <div class="employment-entry">
                 <!--Hyperlink image that will direct users to  NFU Mutual website-->
-                <a href="https://nfumutual.co.uk/">
-                  <img src="assets/images/NFU Mutual image.jpg" alt="NFU Mutual" class="employment-image"/></a>
+                <a href="https://nfumutual.co.uk/" target="_blank">
+                  <img src="assets/images/nfu-mutual-image.jpg" alt="nfumutial-image" class="employment-image"/></a>
                   <!--NFU Mutual employment detail nested in a div element-->
                   <div class="employment-detail">
                     <ul>
@@ -225,21 +223,40 @@
               </section>
       </main>
     <!--Footer-->
-    <footer>
-      <!-- Contact Section -->
-      <section id="contact">
-        <!--Use a div element to contain the list for the contact and a class element for the styling-->
-        <div class="contact-right">
-          <h4>Contact:</h4>
-          <ul>
-            <li>
-              Email:<a href="mailto:merritfemi@gmail.com">merritfemi@gmail.com</a>
-            </li>
-            <li>Mobile Phone: 07480150135</li>
-          </ul>
-        </div>
-      </section>
-    </footer>
+        <footer>
+          <!-- Contact Section -->
+          <section id="contact">
+            <!--Use a div element to contain the list for the contact and a class element for the styling-->
+            <div class="contact-left">
+              <h4>Contact:</h4>
+              <ul>
+                <li>
+                  Email:<a href="mailto:merritfemi@gmail.com"> merritfemi@gmail.com</a>
+                </li>
+                <li>Mobile Phone: 07480198135</li>
+              </ul>
+            </div>
+
+            <div class="contact-form">
+              <h4>Send a Message:</h4>
+              <form action="mailto:merritfemi@gmail.com" method="post" enctype="text/plain">
+                <div class="form-group">
+                  <label for="name">Name:</label>
+                  <input type="text" id="name" name="name" class="form-control" required />
+                </div>
+                <div class="form-group">
+                  <label for="email">Email:</label>
+                  <input type="email" id="email" name="email" class="form-control" required />
+                </div>
+                <div class="form-group">
+                  <label for="message">Message:</label>
+                  <textarea id="message" name="message" class="form-control" rows="4" required></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Send</button>
+              </form>
+            </div>
+          </section>
+        </footer>    
   </body>
 
   </html>
