--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--Meta tag for search engine-->
     <meta name ="description" content="Femi Merit's cv for potential employee to view"/>
     <meta name = "keyword" content = "Femi Merit, Femi's CV, CV Femi, Femi Merit's CV"/> 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" integrity="sha384-ENjdO4Dr2bkBIFxQpeoFnHgfQx1cNJvRlN/JtPYxNfUS6EnFi8tQuN9E9Jo+2G7E" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css" />
     <!--Ttile-->
     <title>Femi Merit</title>
