Updated meta and title

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8" />
+   
     <!--Meta tag for search engine-->
+    <meta charset="utf-8" />
     <meta name ="description" content="Femi Merit's cv for potential employee to view"/>
     <meta name = "keyword" content = "Femi Merit, Femi's CV, CV Femi, Femi Merit's CV"/> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css" />
     <!--Ttile-->
-    <title>Femi Merit</title>
+    <title>Femi Merit CV</title>
   </head>
 
   <body>
