--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
             <div class="contact-form">
               <h4>Send a Message:</h4>
-              <form action="mailto:merritfemi@gmail.com" method="post" enctype="text/plain">
+              <form action="response.html" method="GET">
                 <div class="form-group">
                   <label for="name">Name:</label>
                   <input type="text" id="name" name="name" class="form-control" required />
