Uopdating respinse page

--- a/response.html
+++ b/response.html
@@ -19,10 +19,7 @@
     <nav class="navbar navbar-expand-lg">
         <div>
           <ul class="navbar-nav">
-            <li><a class="nav-link" href="#home" aria-label="Navigate to Home section">Home</a></li>
-            <li><a class="nav-link" href="#education" aria-label="Navigate to Education section">Education</a></li>
-            <li><a class="nav-link" href="#employment" aria-label="Navigate to Employment section">Employment</a></li>
-            <li><a class="nav-link" href="#contact" aria-label="Navigate to Contact section">Contact</a></li>            
+            <li><a class="nav-link" href="index.html" aria-label="Navigate to Home section">Home</a></li>           
           </ul>
         </div>
       </nav>
@@ -40,13 +37,11 @@
           <p class="tag title">SaaS Specialist</p>
         </div>
       </section>
+      </main>
 
-       <!-- Education Section -->
       <section>
         <h2>Thank you</h2>
-        <p></p>
       </section>
-      </main>
  
   </body>
 
