Updated font and posistion of response.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </section>
 
       <!-- Introduction Section -->
-      <section>
+      <section class="intro-placement">
         <img src="assets/images/computer.jpg" alt="stock-image" class="image-right"/>
         <p class="intro-left">
           A committed and motivated IT professional who has developed a high level of
@@ -60,7 +60,7 @@
       </section>
 
        <!-- Education Section -->
-       <section id="education">
+       <section id="education" class="education-placement">
         <!--Create a div to contain the hyperlink image in relation to the education section-->
         <div>
           <a href="https://www.coventry.ac.uk/" target="_blank">
@@ -95,7 +95,7 @@
         </div>
       </section>
             <!-- Employment Section -->
-            <section id="employment">
+            <section id="employment" class="employment-placement">
               <h2 class="employment-title">Employment History</h2>
               <!--Use a div element to contain details of responsibitly working in each company -->
               <div class="employment-entry">
@@ -226,7 +226,7 @@
     <!--Footer-->
         <footer>
           <!-- Contact Section -->
-          <section id="contact">
+          <section id="contact" class="contact-placement">
             <!--Use a div element to contain the list for the contact and a class element for the styling-->
             <div class="contact-left">
               <h4>Contact:</h4>
@@ -259,5 +259,4 @@
           </section>
         </footer>    
   </body>
-
   </html>
