--- a/response.html
+++ b/response.html
@@ -39,8 +39,9 @@
       </section>
       </main>
 
-      <section>
-        <h2>Thank you</h2>
+      <section class="response">
+        <h2>Thank you for reaching out</h2>
+        <p>I will be in touch soon</p>
       </section>
  
   </body>
