updated html code

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <section id="home" class="banner">
         <div>
           <!--Profile picture-->
-          <img src="assets/images/profile-pic.jpg"alt="femi's-profile-pic" class="profile-image"/>
+          <img src="assets/images/profile-pic.jpg" alt="femi's-profile-pic" class="profile-image"/>
           <!--Name-->
           <h1 class="tag name">FEMI MERIT</h1>
           <!--Job title-->
@@ -42,6 +42,7 @@
       </section>
 
       <!-- Introduction Section -->
+      <div>
       <section class="intro-placement">
         <img src="assets/images/computer.jpg" alt="stock-image" class="image-right"/>
         <p class="intro-left">
@@ -58,6 +59,7 @@
           performance and enhance system reliability.
         </p>
       </section>
+    </div>
 
        <!-- Education Section -->
        <section id="education" class="education-placement">
@@ -70,24 +72,24 @@
         <!--Use a div to contain the list of education subjects -->
         <div class="education-right">
           <h2>Education</h2>
-          <h4>Coventry University, Computer Engineer, 2012 - 2015</h4>
+          <h3>Coventry University, Computer Engineer, 2012 - 2015</h3>
 
           <ul id="position1">
-            <h5>Year 1</h5>
+            <h4>Year 1</h4>
             <li>System Projects</li>
             <li>Fundamental Engineering Mathimatics</li>
             <li>Computer System and Networking</li>
           </ul>
 
           <ul id="position2">
-            <h5>Year 2</h5>
+            <h4>Year 2</h4>
             <li>Communication Systems</li>
             <li>Programming for Engineers</li>
             <li>Network System Architectures</li>
           </ul>
 
           <ul id="position3">
-            <h5>Year 3</h5>
+            <h4>Year 3</h4>
             <li>Object Oriented Software</li>
             <li>Advance Network Managment</li>
             <li>Research Project</li>
@@ -106,7 +108,7 @@
                 <div class="employment-detail">
                   <ul>
                     <!--List for Capita-->
-                    <h5>Capita</h5>
+                    <h3>Capita</h3>
                     <li>
                       Supporting Capita’s clients (such as NHS, NHS Wales, Ministry of
                       Defense, and Strathclyde University) remotely
@@ -145,7 +147,7 @@
                   <!--Coventry University employment detail nested in a div element-->
                   <div class="employment-detail">
                   <ul>
-                    <h5>Coventry University</h5>
+                    <h3>Coventry University</h3>
                     <li>
                       Supported end-users with technical issues such as printer
                       issues, window operating systems, Mac OS, and in-house
@@ -191,7 +193,7 @@
                   <!--NFU Mutual employment detail nested in a div element-->
                   <div class="employment-detail">
                     <ul>
-                      <h5>NFU Mutual</h5>
+                      <h3>NFU Mutual</h3>
                       <li>
                         Supported Capita’s clients (such as NHS, NHS Wales, Ministry of
                         Defense, and Strathclyde University) remotely
@@ -229,7 +231,7 @@
           <section id="contact" class="contact-placement">
             <!--Use a div element to contain the list for the contact and a class element for the styling-->
             <div class="contact-left">
-              <h4>Contact:</h4>
+              <h3>Contact:</h3>
               <ul>
                 <li>
                   Email:<a href="mailto:merritfemi@gmail.com"> merritfemi@gmail.com</a>
