--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-   
     <!--Meta tag for search engine-->
     <meta charset="utf-8" />
     <meta name ="description" content="Femi Merit's cv for potential employee to view"/>
     <meta name = "keyword" content = "Femi Merit, Femi's CV, CV Femi, Femi Merit's CV"/> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css"/>
     <!--Ttile-->
     <title>Femi Merit CV</title>
   </head>
@@ -72,24 +71,18 @@
         <!--Use a div to contain the list of education subjects -->
         <div class="education-right">
           <h2>Education</h2>
-          <h3>Coventry University, Computer Engineer, 2012 - 2015</h3>
-
+          <h3>Coventry University, Computer Engineer, 2012 - 2015</h3><br>
           <ul id="position1">
-            <h4>Year 1</h4>
             <li>System Projects</li>
             <li>Fundamental Engineering Mathimatics</li>
             <li>Computer System and Networking</li>
           </ul>
-
           <ul id="position2">
-            <h4>Year 2</h4>
             <li>Communication Systems</li>
             <li>Programming for Engineers</li>
             <li>Network System Architectures</li>
           </ul>
-
           <ul id="position3">
-            <h4>Year 3</h4>
             <li>Object Oriented Software</li>
             <li>Advance Network Managment</li>
             <li>Research Project</li>
