--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
                 <img src="assets/images/capita-image.jpg" alt="capita-image" class="employment-image"/></a>
                 <!--Capita employment detail nested in a div element-->
                 <div class="employment-detail">
+                  <h3 style="padding-left: 20px;">Capita</h3>
                   <ul>
                     <!--List for Capita-->
-                    <h3>Capita</h3>
                     <li>
                       Supporting Capita’s clients (such as NHS, NHS Wales, Ministry of
                       Defense, and Strathclyde University) remotely
@@ -139,8 +139,8 @@
                   <img src="assets/images/coventry-university-image.png" alt="coventryuniversity-image" class="employment-image"/></a>
                   <!--Coventry University employment detail nested in a div element-->
                   <div class="employment-detail">
+                  <h3 style="padding-left: 20px;">Coventry University</h3>
                   <ul>
-                    <h3>Coventry University</h3>
                     <li>
                       Supported end-users with technical issues such as printer
                       issues, window operating systems, Mac OS, and in-house
@@ -185,8 +185,8 @@
                   <img src="assets/images/nfu-mutual-image.jpg" alt="nfumutial-image" class="employment-image"/></a>
                   <!--NFU Mutual employment detail nested in a div element-->
                   <div class="employment-detail">
+                  <h3 style="padding-left: 20px;">NFU Mutual</h3>
                     <ul>
-                      <h3>NFU Mutual</h3>
                       <li>
                         Supported Capita’s clients (such as NHS, NHS Wales, Ministry of
                         Defense, and Strathclyde University) remotely
